prusti-tests/tests/parse/ui/predicate_fail-2.stderr
error: `predicate!` can only be used on function definitions; it supports no attributes
  --> $DIR/predicate_fail-2.rs:18:5
   |
18 |     static FOO: usize = 0;
   |     ^^^^^^

error: `predicate!` can only be used on function definitions; it supports no attributes
  --> $DIR/predicate_fail-2.rs:24:5
   |
24 |     #[pure]
   |     ^

error: `predicate!` can only be used on function definitions; it supports no attributes
  --> $DIR/predicate_fail-2.rs:33:5
   |
33 |     #[trusted]
   |     ^

error: free function without a body
  --> $DIR/predicate_fail-2.rs:13:5
   |
13 |     fn result_is_one() -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |                               |
   |                               help: provide a definition for the function: `{ <body> }`

error: aborting due to 4 previous errors

